--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -109,13 +109,17 @@ The platform balance is relatively easy to construct, assemble and instrument. H
 In the yoke balance configuration, forces and torques are coupled and the balance resolving centre coincides with the centre of the tunnel. This configuration, however, presents some structural deflections due to the large span of the measuring and support arms.
 
 The pyramidal balance configuration is a further improvement of the yoke balance in order to overcome the shortcomings of the other balances. It is capable of measuring six components of forces and
-torques separately and without coupling,provided that the balance is well assembled and calibrated.
+torques separately and without coupling, provided that the balance is well assembled and calibrated.
 
 It is possible to merge some of the force balance concepts to come up with an innovative, easy-to-manufacture and cost-effective external force balance. One such solution can be the use of a Stewart platform as a force balance. The Stewart platform offers another advantage - dynamic positioning of the model in the test section.
 The platform bars are subjected to axial forces only and can have strain-gauges coupled to each one as Wheatstone briges. Forces and torques are themn obtained based on the axial displacements obtained by the strain gauges\cite{fernandes_design_nodate}.
+
+Table \ref{tablecom} shows a summary of advantages and disadvantages of external force balances.
+\clearpage
 \begin{center}
 \begin{table}[!htb]
 \caption[Comparison of Force Balances]{A Table of Comparison and Contrast of External Force Balances}
+\label{tablecom}
 \end{table}
 \begin{tabular}{|l|l|l|}
 \hline
