--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -137,7 +137,7 @@ Stewart platforms can take three primary configurations i.e. 3-3 type, 3-6 type 
 The base and the platform (for the 3-3 type), and the platform (for the 3-6 type) are triangular in shape. The triangular shape has a good load carrying capability only in theory and for certain dimensions. These configurations are, however,not possible in practice since double spherical joints will be needed where two bars have to be joined at the same vertex
 \cite{fernandes_design_nodate}.
 
-Thus a 6-6 type platform is considered. The base and platform are hexagon in shape.
+The platform is a a 6-6 type. The base and platform are hexagon in shape.
 
 \subsection{Quality Index $(\lambda)$ of Stewart Platform Design}
 Quality index $(\lambda)$ varies from 0 to 1.\\
