--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -148,7 +148,7 @@ Where,\\
 \textbf{Singularities} - uncontrollable states.
 
 The Jacobian matrix relates the axial forces in the $i^{th}$ bar with the applied
-forces and torques and is given in equation \eqref{eq:myeqn} \cite{fernandes_design_nodate}:
+forces and torques and is given in equation \eqref{eq:myeqn1} \cite{fernandes_design_nodate}:
 
 \begin{equation}
 J =
@@ -167,19 +167,21 @@ Quality index can be obtained as shown:
 \end{equation}
 Where, $|J|$ is the determinant of the Jacobian matrix of a given Stewart platform configuration, and $ |J|_{m} $ - determinant of Jacobian Matrix of the optimal configuration.
 
-Applying equation \ref{eq:myeqn1} to the general configuration of a 6-6 platform, it is
+Applying equation \eqref{eq:myeqn1} to the general configuration of a 6-6 platform, it is
 possible to obtain the Jacobian matrix and thus its determinant which can be obtained as follows:
 \begin{equation}
 |J| =
 \frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3}
-\label{eq:myeqn2}
+\label{eq:myeqn02}
 \end{equation}
-Where: a - diameter of moving platform
-b - diameter of base
-$\alpha$ - angle of attack
-$ \beta $ - Side slip angle.
-h - distance between the base and the moving platform.
-$|J|_{m}$ is found by differentiating equation \ref{eq:myeqn2} with respect to h and equating to 0 resulting in \cite{fernandes_design_nodate}:
+Where:\\
+a - diameter of moving platform\\
+b - diameter of base\\
+$\alpha$ - angle of attack\\
+$ \beta $ - Side slip angle\\
+h - distance between the base and the moving platform\\
+
+$|J|_{m}$ is found by differentiating equation \eqref{eq:myeqn02} with respect to h and equating to 0 resulting in \cite{fernandes_design_nodate}:
 \begin{equation}
 h = \sqrt{\frac{1}{3}(a^2 (3 \alpha^2 - 3 \alpha + 1)+ ab (3\alpha\beta - 1)+b^2(3 \beta^2 - 3 \beta + 1))}
 \label{eq:myeqn}
