--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -248,7 +248,9 @@ Whereas the Force balance by the Mechanical Engineering department in Bradley Un
 
 Institutions such as EASA have procured their force balances. The force balances guarantee high accuracy but this may not be a cost-effective solution.
 
-With so much research in the area of Stewart platform, there remains still more work to be done in the areas of control, dynamics, and singular positions. A 6 DOF Stewart platform with force measurement for a low-speed wind tunnel has been done as final year project in JKUAT under the department of Mechatronic Engineering (FYP 17). Whereas the former team was able to successfully design and assemble the platform, as well as the actuation circuitry, there still remains work to do in the following areas \cite{caleb}:
+With so much research in the area of Stewart platform, there remains still more work to be done in the areas of control, dynamics, and singular positions.The Stewart platform force balance by Joao,for example, doesn't have actuation \cite{ferreira2015design}. 
+
+A 6 DOF Stewart platform with force measurement for a low-speed wind tunnel has been done as final year project in JKUAT under the department of Mechatronic Engineering (FYP 17). Whereas the former team was able to successfully design and assemble the platform, as well as the actuation circuitry, there still remains work to do in the following areas \cite{caleb}:
 \begin{enumerate}
 \item Development of a Human-Machine-Interface for Stewart platform control.
 \item Data acquisition from sensors.
