--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -22,6 +22,7 @@
 \usepackage{pdfpages}
 %\usepackage{breqn}
 \usepackage{float}
+\usepackage{nccmath}
 %\usepackage{chngcntr}
 %-----Tex width---------------------------------
 \textwidth 16cm
