--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -15,9 +15,9 @@ platform must have a corresponding fixed position.
 \end{enumerate}
 %\subsection{Kinematic Analysis - Rotational matrix}
 %Euler angles are utilized to obtain rotational matrix for the moving platform of the Stewart platform mechanism. The rotational matrix is represented as follows \cite{csumnu2017simulation}:
-%\begin{equation}
+%\begin{ceqn}
 % R_{P}^B = R_{Z}(\gamma)*R_{Y}(\beta)*R_{X}(\alpha)
-%\end{equation}
+%\end{ceqn}
 %Where $\gamma, \beta, \alpha$ - angles of rotation about the z-, y- and x-axis respectively.
 
 %In matrix form:
@@ -83,15 +83,15 @@ platform must have a corresponding fixed position.
 %\subsection{Inverse Kinematic Analysis}
 %Inverse kinematic analysis is used to determine the length of the legs according to planned trajectories of the moving platform position. In order to consider the length of the leg of a Stewart platform, closed-loop of one leg is used as shown in figure 3.1. Using this closed-form representation, the leg
 %vector with respect to base platform can be obtained as follows \cite{csumnu2017simulation}:
-%\begin{equation}
+%\begin{ceqn}
 %\label{eqn}
 %L_{i} = q_{i}^{B} - b_{i}
-%\end{equation}
+%\end{ceqn}
 %The position vector of ith upper junction point with respect to the base frame is given by the following;
-%\begin{equation}
+%\begin{ceqn}
 %\label{eqn}
 %q_{i}^{B} = t + R_{p}^{B} * q_{i}^{p}
-%\end{equation}
+%\end{ceqn}
 %\begin{center}
 %	\begin{figure}[!h]
 %	\centering
@@ -150,30 +150,37 @@ Where,\\
 The Jacobian matrix relates the axial forces in the $i^{th}$ bar with the applied
 forces and torques and is given in equation \eqref{eq:myeqn1} \cite{fernandes_design_nodate}:
 
-\begin{equation}
-J =
-\begin{pmatrix}
-\hat{\boldsymbol{S_{1}}} & \hat{\boldsymbol{S_{2}}} & \hat{\boldsymbol{S_{3}}} & ... & \hat{\boldsymbol{S_{n}}}
-\end{pmatrix}
-\label{eq:myeqn1}
-\end{equation}
+\begin{ceqn}
+	\begin{align}
+		J =
+		\begin{pmatrix}
+		\hat{\boldsymbol{S_{1}}} & \hat{\boldsymbol{S_{2}}} & \hat{\boldsymbol{S_{3}}} & ... & \hat{\boldsymbol{S_{n}}}
+		\end{pmatrix}
+		\label{eq:myeqn1}
+	\end{align}
+\end{ceqn}
+
 Where n - number of bars and $ \hat{\boldsymbol{S_{i}}}$ - unit vector of the Plucker coordinates along the line of the
 $i_{th}$ bar.
 
 Quality index can be obtained as shown:
-\begin{equation}
-\lambda = \frac{|J|}{|J|_{m}}
-\label{eq:myeqn}
-\end{equation}
+\begin{ceqn}
+	\begin{align}
+		\lambda = \frac{|J|}{|J|_{m}}
+		\label{eq:myeqn}			
+	\end{align}
+\end{ceqn}
 Where, $|J|$ is the determinant of the Jacobian matrix of a given Stewart platform configuration, and $ |J|_{m} $ - determinant of Jacobian Matrix of the optimal configuration.
 
 Applying equation \eqref{eq:myeqn1} to the general configuration of a 6-6 platform, it is
 possible to obtain the Jacobian matrix and thus its determinant which can be obtained as follows:
-\begin{equation}
-|J| =
+\begin{ceqn}
+	\begin{align}
+		|J| =
 \frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3}
 \label{eq:myeqn02}
-\end{equation}
+	\end{align}
+\end{ceqn}
 Where:\\
 a - diameter of moving platform\\
 b - diameter of base\\
@@ -182,23 +189,29 @@ $ \beta $ - Side slip angle\\
 h - distance between the base and the moving platform\\
 
 $|J|_{m}$ is found by differentiating equation \eqref{eq:myeqn02} with respect to h and equating to 0 resulting in \cite{fernandes_design_nodate}:
-\begin{equation}
-h = \sqrt{\frac{1}{3}(a^2 (3 \alpha^2 - 3 \alpha + 1)+ ab (3\alpha\beta - 1)+b^2(3 \beta^2 - 3 \beta + 1))}
-\label{eq:myeqn}
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	h = \sqrt{\frac{1}{3}(a^2 (3 \alpha^2 - 3 \alpha + 1)+ ab (3\alpha\beta - 1)+b^2(3 \beta^2 - 3 \beta + 1))}
+	\label{eq:myeqn}
+\end{align}
+\end{ceqn}
 Taking the Stewart Platform base diameter of 300mm, platform diameter of 200mm and height of 190mm i.e.: 
 
 a = 200mm, b = 300mm, h = 190mm , $\alpha = 0.25$, $ \beta = 0.1667$,
-\begin{equation*}
-|J| =
-\frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3} = 2.437 \times 10^{-3}
-\label{eq:myeqn}
-\end{equation*}
+\begin{ceqn}
+\begin{align}
+	|J| =
+	\frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3} = 2.437 \times 10^{-3}
+	\label{eq:myeqn}
+\end{align}
+\end{ceqn}
 And $ |J|_{m}$ where,
-\begin{equation}
-h = \sqrt{\frac{1}{3}(a^2 (3 \alpha^2 - 3 \alpha + 1)+ ab (3\alpha\beta - 1)+b^2(3 \beta^2 - 3 \beta + 1))} = 0.0764
-\label{eq:myeqn}
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	h = \sqrt{\frac{1}{3}(a^2 (3 \alpha^2 - 3 \alpha + 1)+ ab (3\alpha\beta - 1)+b^2(3 \beta^2 - 3 \beta + 1))} = 0.0764
+	\label{eq:myeqn}
+\end{align}
+\end{ceqn}
 \begin{equation*}
 |J|_{m} =
 \frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3} = 2.834 \times 10^{-3}
@@ -461,9 +474,11 @@ $$^{p}T_{b} = T$$
 	\end{figure}
 \end{center}
 The leg length $l_{k}$ can therefore be found with:
-\begin{equation}
-l_{k} = P_{k} - B_{k} = T + R \times p \times R^{-1} - b_{k}
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	l_{k} = P_{k} - B_{k} = T + R \times p \times R^{-1} - b_{k}
+\end{align}
+\end{ceqn}
 Where,\\
 $P_{k}$ - leg attachment on platform \\
 $B_{k}$- leg attachment on base 
@@ -485,43 +500,53 @@ Further, looking from the top onto the base, each servo can be rotated by the an
 	\end{figure}
 \end{center}
 The anchor $H_{k}$ can be calculated as we rotate around the z-axis with angle $\beta_{k}$ and  by $-\alpha_{k}$ around the y-axis to lift the servo horn which lies in the local x-axis \cite{Eisele_2019}.
-\begin{equation}
-H_{k} = B_{k} + R_{z}(\beta_{k}) R_{y}(-\alpha_{k})\begin{pmatrix}
-|h|\\ 0 \\ 0
-\end{pmatrix}
-\label{eq:myeqn2}
-\end{equation}
-\begin{equation}
- = B_{k} + |h|\begin{pmatrix}
-cos(\alpha_{k})cos(\beta_{k})\\
- cos(\alpha_{k})sin(\beta_{k})\\
-  sin(\alpha_{k})
-\end{pmatrix}
-\label{eq:myeqn2}
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	H_{k} = B_{k} + R_{z}(\beta_{k}) R_{y}(-\alpha_{k})\begin{pmatrix}
+	|h|\\ 0 \\ 0
+	\end{pmatrix}
+	\label{eq:myeqn2}
+\end{align}
+\end{ceqn}
+\begin{ceqn}
+ \begin{align}
+	= B_{k} + |h|\begin{pmatrix}
+	cos(\alpha_{k})cos(\beta_{k})\\
+	 cos(\alpha_{k})sin(\beta_{k})\\
+	  sin(\alpha_{k})
+	\end{pmatrix}
+	\label{eq:myeqn2}
+\end{align}
+\end{ceqn}
 Carrying out the same procedure but with the servo arm when it is on the opposite side and we have:
-\begin{equation}
-H_{k} = B_{k} + R_{z}(\beta_{k}) R_{y}(\pi -\alpha_{k})\begin{pmatrix}
--|h|\\ 0 \\ 0
-\end{pmatrix}
-\label{eq:myeqn2}
-\end{equation}
-\begin{equation}
- = B_{k} + |h|\begin{pmatrix}
-cos(\alpha_{k})cos(\beta_{k})\\
- cos(\alpha_{k})sin(\beta_{k})\\
-  sin(\alpha_{k})
-\end{pmatrix}
-\label{eq:myeqn2}
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	H_{k} = B_{k} + R_{z}(\beta_{k}) R_{y}(\pi -\alpha_{k})\begin{pmatrix}
+	-|h|\\ 0 \\ 0
+	\end{pmatrix}
+	\label{eq:myeqn2}
+\end{align}
+\end{ceqn}
+\begin{ceqn}
+ \chapter{\begin{align}
+	= B_{k} + |h|\begin{pmatrix}
+	cos(\alpha_{k})cos(\beta_{k})\\
+	 cos(\alpha_{k})sin(\beta_{k})\\
+	  sin(\alpha_{k})
+	\end{pmatrix}
+	\label{eq:myeqn2}
+\end{align}}
+\end{ceqn}
 Squaring the lengths of h, d, $l_{k}$ we get the relationship:
 $$h^2 = (H_{k}-B_{k})^{T}(H_{k}-B_{k})$$
 $$d^2 = (P_{k}-H_{k})^{T}(P_{k}-H_{k})$$
 $$l_{k}^2 = (P_{k}-B_{k})^{T}(P_{k}-B_{k})$$
 From the above relationships, further derivation and trigonometric substitutions are done to obtain the inverse kinematics used to calculate each servo angle. This is given as \cite{Eisele_2019}:
-\begin{equation}
-\alpha_{k} = sin^{-1}(\frac{g_{k}}{\sqrt{e_{k}^2+f_{k}^2}})-arctan2(f_{k}, e_{k})
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	\alpha_{k} = sin^{-1}(\frac{g_{k}}{\sqrt{e_{k}^2+f_{k}^2}})-arctan2(f_{k}, e_{k})
+\end{align}
+\end{ceqn}
 Where,
 $$e_{k} = 2hl_{k}^{(z)} $$
 $$e_{k} = 2h(cos(\beta_{k})I_{k}^{(x)}+sin({\beta_{k}})I_{k}^(y))$$
@@ -546,9 +571,11 @@ Whereas linear actuators are relatively easy to control, they are very expensive
 
 \subsection{Motor Selection}
 One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm centre-to-centre, and Distance = $ \pi $ D, then:
-\begin{equation}
-Torque = (0.1777 \times 9.81)\times \frac{141.37}{1000} = 0.246 N\cdot m
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	Torque = (0.1777 \times 9.81)\times \frac{141.37}{1000} = 0.246 N\cdot m
+\end{align}
+\end{ceqn}
 Motors of minimum torque of 0.2 N $\cdot m$ were considered. But for control considerations, only stepper motors and servo motors were shortlisted. Servo motor was considered over Stepper motor because they are cheaper. Also, we are only interested in 0 - 180 degrees positions.
 
 The Servo motor \textbf{TowerPro SG5010} is suitable for this project. The specifications provided by the manufacturer are as follows:
@@ -628,38 +655,50 @@ In such a case the forces experienced at the top of the platform are distributed
 
 If the platform is acted upon by an external wrench {$\vec{F}_e, \vec{M}_e$}, for static equilibrium of the body, the external wrench is statically balanced by the six leg forces of the Stewart platform. Representing the unit vector $\hat{I}_i$ along the i-th leg with respect to B, the leg force is given  by $\hat{I}_if_i$. Considering the force equilibrium of the platform along  three mutually perpendicular directions in B(XYZ), the following force equations can be obtained as in \cite{dwarakanath_design_2001}:
 
-\begin{equation}
+\begin{ceqn}
+	\begin{align}
 	(F_e)_x = f_1I_{1x} + f_2I_{2x} + f_3I_{3x} + f_4I_{4x} + f_5I_{5x} + f_6I_{6x}
-\end{equation}
-\begin{equation}
+\end{align}
+\end{ceqn}
+\begin{ceqn}
+	\begin{align}
 	(F_e)_y = f_1I_{1y} + f_2I_{2y} + f_3I_{3y} + f_4I_{4y} + f_5I_{5y} + f_6I_{6y}
-\end{equation}
-\begin{equation}
+\end{align}
+\end{ceqn}
+\begin{ceqn}
+	\begin{align}
 	(F_e)_z = f_1I_{1z} + f_2I_{2z} + f_3I_{3z} + f_4I_{4z} + f_5I_{5z} + f_6I_{6z}
-\end{equation}
+\end{align}
+\end{ceqn}
 where $(F_e)_x$, $(F_e)_y$ and $(F_e)_z$ are the external forces on the platform along three mutually perpendicular directions x, y and z of the frame B, respectively.
 
 The moment due to the forces $\hat{I}_if_i$ about the origin of B is $(\vec{b}_i x \hat{I}_i)f_i$. Considering the moment equilibrium about x, y and z axes of B, the following moment equations can be obtained as in \cite{dwarakanath_design_2001}:
 
-\begin{equation}
+\begin{ceqn}
+	\begin{align}
 	(M_e)_x = f_1(\vec{b}_1 x \hat{I}_1)_x + f_2(\vec{b}_2 x \hat{I}_2)_x + f_3(\vec{b}_3 x \hat{I}_3)_x + f_4(\vec{b}_4 x \hat{I}_4)_x + f_5(\vec{b}_5 x \hat{I}_5)_x + f_6(\vec{b}_6 x \hat{I}_6)_x
-\end{equation}
-\begin{equation}
+\end{align}
+\end{ceqn}
+\begin{ceqn}
+	\begin{align}
 	(M_e)_y = f_1(\vec{b}_1 x \hat{I}_1)_y + f_2(\vec{b}_2 x \hat{I}_2)_y + f_3(\vec{b}_3 x \hat{I}_3)_y + f_4(\vec{b}_4 x \hat{I}_4)_y + f_5(\vec{b}_5 x \hat{I}_5)_y + f_6(\vec{b}_6 x \hat{I}_6)_y
-\end{equation}
-\begin{equation}
+	\end{align}
+\end{ceqn}
+\begin{ceqn}
+	\begin{align}
 	(M_e)_z = f_1(\vec{b}_1 x \hat{I}_1)_z + f_2(\vec{b}_2 x \hat{I}_2)_z + f_3(\vec{b}_3 x \hat{I}_3)_z + f_4(\vec{b}_4 x \hat{I}_4)_z + f_5(\vec{b}_5 x \hat{I}_5)_z + f_6(\vec{b}_6 x \hat{I}_6)_z
-\end{equation}
+	\end{align}
+\end{ceqn}
 
 where $(M_e)_x$, $(M_e)_y$ and $(M_e)_z$ are the external moments on the platform  about the three coordinate axes of B. Combining the equations the relationship between the external wrench and the forces experienced by the legs can be expressed as follows:
-\begin{equation}
-	$$
-\begin{Bmatrix}
-	\vec{F}_e \\
-	\vec{M}_e \\
-\end{Bmatrix} = [H]\{F\}
-$$
-\end{equation}
+\begin{ceqn}
+\begin{align}
+	\begin{Bmatrix}
+		\vec{F}_e \\
+		\vec{M}_e \\
+	\end{Bmatrix} = [H]\{F\}
+\end{align}
+\end{ceqn}
 
  
 \subsection{Velocity Measurement}
@@ -673,9 +712,11 @@ An important part in wind tunnel measurements is the measure of pressure at spec
 \end{center}
 For steady flow of an incompressible fluid for which viscosity can be neglected, the fundamental equation has the form:
 
-\begin{equation}
+\begin{ceqn}
+	\begin{align}
 	v = \sqrt{\frac{2(P_{0} - P)}{\rho}}
-\end{equation}
+\end{align}
+\end{ceqn}
 
 Where V is the speed of the fluid, $P_{0}$ is the total, also called the stagnation, pressure at that point of measurement, and P is the static pressure at the same point.
 
