--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -677,7 +677,7 @@ For steady flow of an incompressible fluid for which viscosity can be neglected,
 	v = \sqrt{\frac{2(P_{0} - P)}{\rho}}
 \end{equation}
 
-Where V is the speed of the fluid, P0 is the total, also called the stagnation, pressure at that point of measurement, and p is the static pressure at the same point.
+Where V is the speed of the fluid, $P_{0}$ is the total, also called the stagnation, pressure at that point of measurement, and P is the static pressure at the same point.
 
 Three pitot probes are to be used in the wind tunnel i.e. in the test section, intake and diffuser sections.
                                                                                                                                                                    
