--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -726,20 +726,20 @@ The main requirement for this is the need for wireless communication via WIFI an
 \begin{center}
 	\begin{figure}[H]
 	\centering
-	\includegraphics[width=0.68\linewidth]{Figures/mcu}
+	\includegraphics[width=0.7\linewidth]{Figures/mcu}
 	\caption[Microcontroller]{Microcontroller}
 	\end{figure}
 \end{center}
 \subsection{Power Supply}
-The power supply chosen is a AC/DC power converter. Since the highest voltage required is 12 volts. This also used as the highest power supply to the PCB.
+The power supply chosen is an AC/DC power converter since the highest voltage required is 12 volts. This is also used as the highest power supply to the PCB.
 
-Both 5 and 3.3 volts are required in the PCB for other peripherals. To this end a buck converter and linear converter are used for 5 ad 3.3 volts respectively.
+Both 5 and 3.3 volts are required in the PCB for other peripherals. To this end, a buck converter and linear converter are used for 5 ad 3.3 volts respectively.
 
 \begin{center}
 	\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/buck}
-	\caption[Buck converter]{Buck Converter 12V to 5v}
+	\caption[Buck converter]{Buck Converter 12V to 5V}
 	\end{figure}
 \end{center}
 
@@ -750,7 +750,6 @@ Both 5 and 3.3 volts are required in the PCB for other peripherals. To this end 
 	\caption[Linear Voltage Converter]{Linear level converter 5V to 3.3v}
 	\end{figure}
 \end{center}
-
 The linear converter dissipates the energy loss though heat while buck converter is through switching.
 
 \subsection{Servo Control}
