--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -72,7 +72,7 @@ Equivalent Strain & 0 ul & 0.052 ul\\
 \end{center}
 Von Mise's stress does not exceed the Yield Stress of Aluminum (275 MPa) hence the platform will not yield under this applied load.
 
-Application of loads on the platform translates to induced strain in the Stewart platform legs. This will provide an input for the strain gauges used for force measurements. Such strains are shown in figure \ref{eq}.
+Application of loads on the platform translates to induced strain in the Stewart platform legs. Such strains are shown in figure \ref{eq}.
 \begin{center}
 	\begin{figure}[H]
 	\centering
@@ -81,6 +81,7 @@ Application of loads on the platform translates to induced strain in the Stewart
 	\label{eq}
 	\end{figure}
 \end{center}
+These strains are small thus they will need amplification in order provide substantial input for the strain gauges used for force measurements. 
 \subsection{Stewart Platform Simulation}
 Stewart Platform simulation was done on MatLab using the Inverse kinematic equations. Different servo angles for different platform movements can be obtained from the simulation. The angles for yaw, pitch and roll could be adjusted during simulations to predict the maximum allowable angle values. Value of displacement in the x-, y- and z-directions could also be adjusted enabling us to predict the maximum allowable displacement in the respective directions.
 \begin{center}
