sweeping changes fix typos edit hmi figure correct equations

--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -2,7 +2,7 @@
 \section{Wind Tunnel}
 A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans.
 \begin{center}
-	\begin{figure}[!htb]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\linewidth]{Figures/Fig2}
 	\caption[A Typical Wind Tunnel]{Diagram of a typical wind tunnel \cite{morris_force_2010}}
@@ -22,7 +22,7 @@ Today the largest wind tunnel in the world is the National Full-Scale Aerodynami
 NASA uses wind tunnels to test scale models of aircraft and spacecraft. The wind tunnels help to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere. 
 \begin{center}
      %&\vspace*{-4.0cm}
-    \begin{figure}[!h]
+    \begin{figure}[H]
 \centering
 \includegraphics{Figures/Fig4}
 \caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket \cite{NASA}}
@@ -117,7 +117,7 @@ The platform bars are subjected to axial forces only and can have strain-gauges 
 Table \ref{tablecom} shows a summary of advantages and disadvantages of external force balances.
 \clearpage
 \begin{center}
-\begin{table}[!htb]
+\begin{table}[H]
 \caption[Comparison of Force Balances]{A Table of Comparison and Contrast of External Force Balances}
 \label{tablecom}
 \end{table}
