--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -119,5 +119,7 @@ The schematics from the electrical designs as seen in the appendix were routed t
 	\centering
 	\includegraphics[width=0.7\linewidth]{Figures/pcb}
 	\caption[Printed Circuit Board view]{Printed Circuit Board view}
+	\label{fig:pcb3d}
 	\end{figure}
 \end{center}
+The PCB is meant to be compact as shown in the figure \ref{fig:pcb3d}. It is also integrates most of the components to minimize use of wires to make connections. 
