--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -410,14 +410,15 @@ The Spherical joint was done on Autodesk Inventor and included in the Stewart Pl
 \end{center}
 \subsection{Finite Element Analysis}
 A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
-%\begin{center}
-	%\begin{figure}[!htb]
-	%\centering
-	%\includegraphics[width=0.75\linewidth]{Figures/Von}
-	%\caption[Von Mise's Stress]{Von Mise's Stress}
-	%\end{figure}
-%\end{center}
+\begin{center}
+	\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.75\linewidth]{Figures/FEA}
+	\caption[FEA Setup]{FEA Setup}
+	\end{figure}
+\end{center}
 The rods/legs of the Stewart platform are subjected to axial forces which cause slight strains which can be used to obtain force and moment measurements during wind tunnel testing.
+\clearpage
 \begin{center}
 \begin{table}[H]
 \caption{Operating Conditions}
